[package]
name = "css-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.2"
nom = "7.1.1"
thiserror = "1.0.31"
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["paris"] }
serde_json = "1.0.81"
which = "4.2.5"
convert_case = "0.5.0"
tera = { version = "1.15.0", default-features = false }
derive_more = "0.99.17"
lazy_static = "1.4.0"

# handlebars = "4.3.0"
# serde_json = "1.0.81"
