[package]
name = "css-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["paris"] }
convert_case = "0.5.0"
derive_more = "0.99.17"
itoa = "1.0.2"
nom = "7.1.1"
thiserror = "1.0.31"
css-parser-macro = { path = "./css-parser-macro" }

[workspace]
members = ["css-parser-macro"]
