[package]
name = "libp2p-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
futures-timer = "3.0.2"
libp2p = { version = "0.46.1", features = ["yamux", "dcutr"] }
log = "0.4.17"
tokio = { version = "1.20.0", features = ["full"] }
