[package]
name = "pest-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
pest = "2.1.3"
pest_derive = "2.1.0"

[[test]]
name = "test_json"
path = "src/parser/json.rs"

[[test]]
name = "test_css"
path = "src/parser/css.rs"
