[package]
name = "poem-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.29", features = ["test"] }
tokio = { version = "1.18.2", features = ["full"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
