[package]
name = "serial-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
nom = "7.1.1"
serialport = "4.2.0"
sysinfo = "0.25.1"
thiserror = "1.0.32"
