[package]
name = "wgpu-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bytemuck = { version = "1.7.3", features = ["derive"] }
env_logger = "0.9.0"
image = "0.24.2"
log = "0.4.16"
pollster = "0.2.4"
wgpu = "0.12"
winit = "0.26.0"

[profile.release]
strip = true
opt-level = 3
overflow-checks = false
debug = 0
lto = true

[dev-dependencies]
fontdue = "0.7.2"
guillotiere = "0.6.2"
lyon = "0.17.10"
