[package]
name = "wgpu-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bytemuck = { version = "1.7.3", features = ["derive"] }
env_logger = "0.9.0"
image = "0.24.2"
log = "0.4.16"
pollster = "0.2.4"
wgpu = "0.12"
winit = "0.26.0"

[profile.release]
strip = true
opt-level = 3
overflow-checks = false
debug = 0
lto = true

[dev-dependencies]
fontdue = { version = "0.7.2", features = ["parallel"] }
guillotiere = "0.6.2"
lyon = { version = "0.17.10", features = ["extra"] }
ttf-glyphs = { path = "/develop/sources/ttf-glyphs" }
ttf-parser = "0.15.0"
