[package]
name = "css-parser-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.96"
nom = "7.1.1"

[build-dependencies]
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["paris"] }
